	* Applied patch for French translation (thanks Alain Tauch)
	* Updated Makefile to give the user a overview of commands on "make"
	* Updated Makefile to only generate the messages.pot file when 
	  explicitly called with "make messages" - this should put us in 
	  for less useless SVN diffs, as suggested by Alain
	* Modified "doc/dev/i18n.txt" to reflect changes of today

Fri, 07 Apr 2006 22:00:06 +0200 <thp@perli.net>
	* Uhh! Gotta love bureaucracy (bureaucrazy?) -- anyway, got some 
	  more GPL-related copyright notices into the source tree
	* Removed "debian/" structure for now.. Currently working with 
	  people at Ubuntu ("REVU") to get a decent Ubuntu package for 
	  gPodder, based on the great work of Peter Hoffmann
	* The debian build structure will probably be seen elsewhere soon

Fri, 07 Apr 2006 21:22:11 +0200 <thp@perli.net>
	* Put podcasts onto the iPod in a more iTunes-like way

Fri, 07 Apr 2006 20:06:29 +0200 <thp@perli.net>
	* Make iPod mountpoint configurable (gPodderLib, glade GUI)
	* Display error message when iPod cannot be found/accessed
	* Updated gpodder.desktop file
	* Updated german translation
	* Updated deb package source for upload to Ubuntu's REVU
	* Fixed BUG that prevented user from adding channels (huh!?)

Fri, 07 Apr 2006 04:59:01 +0200 <thp@perli.net>
	* Added "Suggests" to the Debian control file
	* Updated Debian changelog, pushed version of debian package
	* Pushed version date in bin/gpodder

Fri, 07 Apr 2006 03:33:18 +0200 <thp@perli.net>
	+ Added new XML tag to localDB so we can save channel metdata
	* Channel metadata save/read functions
	* Added sync_to_devices metadata field to podcastChannel
	* Disabled some unneeded debug output
	* Callback-function support in libipodsync (for GUI feedback)
	* iPod synchronization status window
	+ Added data/artwork/* stuff for iPod sync window graphics
	* iPod synchronization - check if an episode is already on iPod
	* call "sync" on episode copy end to iPod to show real progress