@@ -1,10 +1,32 @@
-# gpodder translation makefile
+#
+# gPodder (a media aggregator / podcast client)
+# Copyright (C) 2005-2006 Thomas Perl <thp at perli.net>
+#
+# This program is free software; you can redistribute it and/or
+# modify it under the terms of the GNU General Public License
+# as published by the Free Software Foundation; either version 2
+# of the License, or (at your option) any later version.
+#
+# This program is distributed in the hope that it will be useful,
+# but WITHOUT ANY WARRANTY; without even the implied warranty of
+# MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
+# GNU General Public License for more details.
+#
+# You should have received a copy of the GNU General Public License
+# along with this program; if not, write to the Free Software
+# Foundation, Inc., 51 Franklin Street, Fifth Floor, Boston, 
+# MA  02110-1301, USA.
+#
 
-default:
-	for langfile in *.po; do echo -n $${langfile}; msgmerge -U $${langfile} ../messages.pot; mkdir -p ../locale/`basename $${langfile} .po`/LC_MESSAGES/; msgfmt $${langfile} -o ../locale/`basename $${langfile} .po`/LC_MESSAGES/gpodder.mo; done
+update:
+	for langfile in *.po; do echo 'Compiling translation:' $${langfile}; mkdir -p ../locale/`basename $${langfile} .po`/LC_MESSAGES/; msgfmt $${langfile} -o ../locale/`basename $${langfile} .po`/LC_MESSAGES/gpodder.mo; done
+
+generators:
+	for langfile in *.po; do echo -n $${langfile}; msgmerge -U $${langfile} ../messages.pot; done
 
 clean:
 	rm -rf ../locale *~ *.mo
 
-.PHONY: default clean
+
+.PHONY: update generators clean
 
