@@ -5,6 +5,10 @@ Sat, 08 Apr 2006 08:44:31 +0200 <thp@perli.net>
 	  explicitly called with "make messages" - this should put us in 
 	  for less useless SVN diffs, as suggested by Alain
 	* Modified "doc/dev/i18n.txt" to reflect changes of today
+	* Applied patch from Adrien Beaucreux to make the podcastChannel 
+	  class act like a Python list and therefore make code more cute
+	* Modified "data/po/Makefile" and "Makefile" for modifying the 
+	  *.po files only when explicitly requested by the developer
 
 Fri, 07 Apr 2006 22:00:06 +0200 <thp@perli.net>
 	* Uhh! Gotta love bureaucracy (bureaucrazy?) -- anyway, got some 
